--- a/main.html
+++ b/main.html
@@ -9,10 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	 <div id="container">
-		 <div id="text">
-			 Welcome to the world of Web development
-		 </div>
-		 
+		 <span id="text">Welcome to the world of Web development</span>
 	 </div>
 
 
