--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	 <div id="container">
-		 <span id="text">Welcome to the world of Web development</span>
+		 <div id="text"><span>Welcome to the world of Web development</span></div>
 	 </div>
 
 
